--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hallo, schön dabei zu sein =D</h1>
+    <h1>Hallo, sch&ouml;n dabei zu sein =D</h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
